# arch-demo

./: .cs-java  .cs-java2  .env  .gitignore  .jvmopts  .scalafix.conf  .scalafmt.conf  build.sbt  justfile  zellij-layout.kdl
.local/: .2.env  .2a.env
QA/Loki/: Get labels.bru  bruno.json
QA/Loki/environments/: Local.bru
clients/grpc-web/: client.js  package-lock.json  webpack.config.js
clients/grpc-web-vue/: buf.gen.yaml  buf.yaml  index.html  package-lock.json  package.json
clients/grpc-web-vue/proto/: service-clustering.proto
clients/grpc-web-vue/src/: App.vue
clients/traefik/: dynamic.yaml  traefik.yaml
db/cassandra/changelogs/: v1.2.0-akka-persistence-cassandra.xml
db/postgresql/: changelog.xml
db/postgresql/changelogs/: v1.0.000-create-schema.xml  v1.5.0-akka-projections-r2dbc-postgresql-schema.xml
dev/: docker-compose.yml
project/: Dependencies.scala  plugins.sbt
project/project/: PluginsDependencies.scala
src/main/protobuf/: service-clustering.proto  service.proto
src/main/resources/: app1.conf  app2.conf  (+9 more)
support/: docker-compose-messaging.yml  docker-compose-observability.yml  docker-compose-storage-linux.yml  docker-compose-storage-macos.yml
support/apps/mock-server/: .gitignore  justfile  pyproject.toml  requirements-dev.txt
support/apps/mock-server/docs/grafana/: dboard.dashboard.py
support/apps/mock-server/src/: config.py  run.py
support/apps/mock-server/src/main/: __init__.py
support/docker-base-services/: base-compose-services-messaging.yml  base-compose-services-observability.yml  base-compose-services-storage.yml
(+95 files in other folders)
